valgrind.txt

id build_subtract_operator (void) = 0;
                      ^
Expr_Tree_Builder.h:23:22: note:        virtual void Expr_Tree_Builder::build_multiply_operator()
         virtual void build_multiply_operator (void) = 0;
                      ^
Expr_Tree_Builder.h:24:22: note:        virtual void Expr_Tree_Builder::build_divide_operator()
         virtual void build_divide_operator (void) = 0;
                      ^
Expr_Tree_Builder.h:25:22: note:        virtual void Expr_Tree_Builder::build_modulo_operator()
         virtual void build_modulo_operator (void) = 0;
                      ^
Expr_Tree_Builder.h:26:22: note:        virtual void Expr_Tree_Builder::build_open_parenthesis()
         virtual void build_open_parenthesis (void) = 0;
                      ^
Expr_Tree_Builder.h:27:22: note:        virtual void Expr_Tree_Builder::build_close_parenthesis()
         virtual void build_close_parenthesis (void) = 0
                      ^
driver.cpp:17:2: error: ‘Facade’ was not declared in this scope
  Facade calculator = new Facade (*build_tree);
  ^
driver.cpp:17:9: error: expected ‘;’ before ‘calculator’
  Facade calculator = new Facade (*build_tree);
         ^
driver.cpp:35:19: error: ‘calculator’ was not declared in this scope
      int result = calculator->execute(infix);
                   ^
driver.cpp:53:9: error: ‘calculator’ was not declared in this scope
  delete calculator;

